--- a/Studyfolio.html
+++ b/Studyfolio.html
@@ -11,5 +11,10 @@
         <button id="button-after-10th">After 10th</button>
         <button id="button-after-inter">After Inter</button>
     </div>
+    <script>
+        document.getElementById("button-after-10th").addEventListener("click", function() {
+            window.location.href = "after_10th.html"; // Replace with the URL of your page for after 10th
+        });
+    </script>
 </body>
 </html>
